--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -6,17 +6,18 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Upload Python Package
+name: Python Package CI
 
 on:
   release:
     types: [published]
+  workflow_dispatch:
 
 permissions:
   contents: read
 
 jobs:
-  release-build:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -51,28 +52,29 @@ jobs:
           name: release-dists
           path: dist/
 
-  pypi-publish:
-    runs-on: ubuntu-latest
-    needs:
-      - release-build
-    permissions:
-      # IMPORTANT: this permission is mandatory for trusted publishing
-      id-token: write
-
-    # Dedicated environments with protections for publishing are strongly recommended.
-    # For more information, see: https://docs.github.com/en/actions/deployment/targeting-different-environments/using-environments-for-deployment#deployment-protection-rules
-    environment:
-      name: pypi
-      url: https://pypi.org/p/sense-voice-streaming-asr
-
-    steps:
-      - name: Retrieve release distributions
-        uses: actions/download-artifact@v4
-        with:
-          name: release-dists
-          path: dist/
-
-      - name: Publish release distributions to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          packages-dir: dist/
+#  pypi-publish:
+#    runs-on: ubuntu-latest
+#    if: github.event_name == 'workflow_dispatch'
+#    needs:
+#      - build
+#    permissions:
+#      # IMPORTANT: this permission is mandatory for trusted publishing
+#      id-token: write
+#
+#    # Dedicated environments with protections for publishing are strongly recommended.
+#    # For more information, see: https://docs.github.com/en/actions/deployment/targeting-different-environments/using-environments-for-deployment#deployment-protection-rules
+#    environment:
+#      name: pypi
+#      url: https://pypi.org/p/sense-voice-streaming-asr
+#
+#    steps:
+#      - name: Retrieve release distributions
+#        uses: actions/download-artifact@v4
+#        with:
+#          name: release-dists
+#          path: dist/
+#
+#      - name: Publish release distributions to PyPI
+#        uses: pypa/gh-action-pypi-publish@release/v1
+#        with:
+#          packages-dir: dist/
