--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -14,7 +14,7 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: read
+  contents: write
 
 jobs:
   build:
@@ -44,13 +44,28 @@ jobs:
       - name: Build release distributions
         run: |
           python -m pip install build
-          python -m build
+          python -m build --wheel
 
-      - name: Upload distributions
+      - name: Upload distributions artifact
         uses: actions/upload-artifact@v4
         with:
           name: release-dists
           path: dist/
+
+  upload-to-release:
+    if: github.event_name == 'release'
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Download distributions from build job
+        uses: actions/download-artifact@v4
+        with:
+          name: release-dists
+          path: dist/
+      - name: Upload assets to Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: dist/*
 
 #  pypi-publish:
 #    runs-on: ubuntu-latest
